# upload-download-django

./: .dockerignore  .gitignore  Dockerfile  Readme.md  db.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
accounts/: urls.py
send/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/registration/: login.html  signup.html
templates/upload/: delete.html  upload_detail.html  upload_form.html  upload_list.html
upload/: apps.py  form.py  form_validator.py  models.py  urls.py  utils.py  views.py
upload/management/commands/: remove_expired_files.py
upload/migrations/: 0001_initial.py  0002_upload_upload_path.py  0002_upload_user.py  0003_alter_upload_id.py  0003_download.py  0004_download_created_at_download_updated_at_and_more.py  0004_rename_upload_id_download_upload.py  0005_rename_upload_path_upload_file_name.py  0006_upload_upload_path.py
upload/scheduler/: jobs.py  run_script.py
upload/templates/upload/: delete.html  upload_detail.html  upload_form.html
