[tool.poetry]
name = "send-lmwn"
version = "0.1.0"
description = ""
authors = ["aecuto <kampee.expertly01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
pytz = "^2021.3"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
